# yolo_gst_trt_for_cuda

./: .gitignore  CreateDockerimg.txt  README.txt
CPP/: CMakeLists.txt
CPP/cmake/modules/: FindOpenCvCustom.cmake  find_library_create_target.cmake
CPP/examples/: img_001_result.txt
CPP/include/: AlgorithmsPolygon.h  BufferFrameGpu.h  BuilderOnnx.hpp  CudaStream.h  EnginePipeline.h  MatConverter.h  NppFunction.h  NvJpgEncoder.h  SettingPipeline.h  TRTEngine.hpp  TRTEngineConfig.hpp  TrackerManager.h  YoloToolsGPU.h
CPP/include/ByteTrack/: BYTETracker.h
CPP/include/common/: Common.h  DtoToCharp.h  FrameGpu.h  IDispose.h  MainLogger.hpp  NvidiaLogger.h  magic_enum.hpp
CPP/infrastructure/: AlgorithmsPolygon.cpp  BufferFrameGpu.cpp  BuilderOnnx.cpp  EnginePipeline.cpp  ExtensionCharp.cpp  MatConverter.cu  NppFunction.cpp  NvJpgEncoder.cpp  TRTEngine.cpp  TrackerManager.cpp  YoloToolsGPU.cu
CPP/spdlog/include/spdlog/: logger-inl.h  logger.h  pattern_formatter-inl.h  spdlog.h  tweakme.h
CPP/spdlog/include/spdlog/details/: registry-inl.h  registry.h  synchronous_factory.h
CPP/spdlog/include/spdlog/fmt/bundled/: core.h  format.h
CPP/tests/: Helper.hpp  NppFunctionTest.cpp  TestCuda.cu  TestExtensionCharp.cpp  TestGPUMat.cpp  TestGstDecoder.cpp  TestMatConverter.cu  TestNppFunction.cpp  TestNvJpgEncoder.cpp  TestPointInPolygon.cpp  TestRunProject.cpp  TestTRTEngine.cpp  TestYoloGPU.cu  draft.cpp
CPP/videogst/: CudaYUV_NV12.cu  GstBufferManager.cpp  GstDecoder.cpp  GstUtility.cpp
CPP/videogst/include/: CudaUtility.h  CudaYUV_NV12.h  GstBufferManager.h  GstDecoder.h  GstUtility.h  cudaMath.h  cudaVector.h
Charp/YoloGstWrapper/: YoloGstWrapper.sln
Charp/YoloGstWrapper/WrapperCpp/: ConverterTRT.cs  IPipelineMlExtension.cs  WrapperCpp.csproj
Charp/YoloGstWrapper/WrapperCpp/Configs/: ConverterConfig.cs  LayerSizeConfig.cs  PointWrapCpp.cs  Polygon.cs  PolygonWrapCpp.cs  TrackerConfig.cs  YoloConfigs.cs
Charp/YoloGstWrapper/WrapperCpp/Dto/: RectDetect.cs
Charp/YoloGstWrapper/WrapperCpp/InfrastructureCPP/: PipelineMlExtension.cs  PipelinePInvoke.cs
Charp/YoloGstWrapper/WrapperCpp/InfrastructureCPP/PInvokeDto/: ImageFrame.cs  LayerSize.cs  PipelineOutputData.cs  PolygonsSettingsExternal.cs  RectDetectEngin.cs  RectDetectExternal.cs  SettingPipeline.cs  TRTEngineConfig.cs
Charp/YoloGstWrapper/WrapperCppIntegrationTests/: Program.cs  WrapperCppIntegrationTests.csproj
Charp/YoloGstWrapper/WrapperCppIntegrationTests/Integration/: PipelineMlExtensionIntegrationTest.cs
